Fixed alignment issues

--- a/style.css
+++ b/style.css
@@ -250,6 +250,8 @@ nav a {
   width: 75%;
   gap: 1rem;
   flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
 @media screen and (max-width: 1500px) {
